--- a/src/components/Films/Films.css
+++ b/src/components/Films/Films.css
@@ -153,7 +153,7 @@
     font-size: 2rem;
     line-height: 23.7px;
     color: white;
-    overflow-wrap: bre;
+    overflow-wrap: break-word;
 }
 
 .films__filmsWrapper_newFilms_filmsContainer_movieItem_hrefCards {
