--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -57,15 +57,22 @@
     color: #E5261E;
     background: none;
     cursor: pointer;
+    transition: all 0.8s;
 }
 
 .header__wrapper_searchBox_findButton:hover {
     color: #CC221B;
 }
 
+.header__wrapper_enterBox {
+    display: flex;
+    align-items: center;
+}
+
 .header__wrapper_enterBox_userButtonBox {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .header__wrapper_enterBox_userButtonBox_userName {
@@ -73,6 +80,7 @@
     height: 1.9rem;
     font-size: 1.6rem;
     font-weight: 500;
+    margin-right: -1.5rem;
 }
 
 .header__wrapper_enterBox_userButtonBox_button{
@@ -85,10 +93,27 @@
     border: none;
     cursor: pointer;
     letter-spacing: 0.1rem;
+    transition: all 0.8s;
 }
 
 .header__wrapper_enterBox_userButtonBox_button:hover {
     background: #CC221B;
+}
+
+.header__wrapper_enterBox_userButtonBox_buttonOut {
+    margin-left: 3.2rem;
+    font-weight: 500;
+    font-size: 1.6rem;
+    line-height: 1.9rem;
+    border: none;
+    color: #E5261E;
+    background: none;
+    cursor: pointer;
+    transition: all 0.8s;
+}
+
+.header__wrapper_enterBox_userButtonBox_buttonOut:hover {
+    color: #CC221B;
 }
 
 @media screen and (min-width: 720px) {
